service-app1.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2025-08-30T00:37:31Z"
  labels:
    app: app1
  name: app1-svc
  namespace: default
  resourceVersion: "16803"
  uid: a65b0cc9-2e67-4bd8-8f49-f539cf8c5b43
spec:
  clusterIP: 10.101.151.193
  clusterIPs:
  - 10.101.151.193
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app1
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
