service-app2.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2025-08-30T00:37:41Z"
  labels:
    app: app2
  name: app2-svc
  namespace: default
  resourceVersion: "16840"
  uid: feccea2a-dd73-4a0a-97ac-33ac531ad90b
spec:
  clusterIP: 10.99.114.226
  clusterIPs:
  - 10.99.114.226
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app2
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
